# _examples/authors/pgx/internal/authors/routes.go
@@ -5,8 +5,8 @@ package authors
 import "net/http"
 
 func (s *Service) RegisterHandlers(mux *http.ServeMux) {
-	mux.HandleFunc("POST /authors/author", s.handleCreateAuthor())
-	mux.HandleFunc("DELETE /authors/author/{id}", s.handleDeleteAuthor())
-	mux.HandleFunc("GET /authors/author/{id}", s.handleGetAuthor())
-	mux.HandleFunc("GET /authors/authors", s.handleListAuthors())
+	mux.HandleFunc("POST /author", s.handleCreateAuthor())
+	mux.HandleFunc("DELETE /author/{id}", s.handleDeleteAuthor())
+	mux.HandleFunc("GET /author/{id}", s.handleGetAuthor())
+	mux.HandleFunc("GET /authors", s.handleListAuthors())
 }
