# _examples/authors/sqlite/internal/authors/routes.go
@@ -5,8 +5,10 @@ package authors
 import "net/http"
 
 func (s *Service) RegisterHandlers(mux *http.ServeMux) {
-	mux.HandleFunc("POST /authors/author", s.handleCreateAuthor())
-	mux.HandleFunc("DELETE /authors/author/{id}", s.handleDeleteAuthor())
-	mux.HandleFunc("GET /authors/author/{id}", s.handleGetAuthor())
-	mux.HandleFunc("GET /authors/authors", s.handleListAuthors())
+	mux.HandleFunc("POST /authors", s.handleCreateAuthor())
+	mux.HandleFunc("DELETE /authors/{id}", s.handleDeleteAuthor())
+	mux.HandleFunc("GET /authors/{id}", s.handleGetAuthor())
+	mux.HandleFunc("GET /authors", s.handleListAuthors())
+	mux.HandleFunc("PUT /authors/{id}", s.handleUpdateAuthor())
+	mux.HandleFunc("PATCH /authors/{id}/bio", s.handleUpdateAuthorBio())
 }
